<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx SALAD THIEVES WORK xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
    <string name="app_name">UBACapital</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="genericContentDescription">Generic stuff</string>
    <string name="emailInputHint">Email</string>
    <string name="passwordInputHint">***********</string>
    <string name="facebookButton">Facebook</string>
    <string name="twitterButton">Twitter</string>
    <string name="nameHint">Your Name</string>
    <string name="signUpPasswordHint">Password</string>
    <string name="signUpRepeatPasswordHint">Repeat password</string>
    <string name="nameTitleText">Hi, I am Professor Invest!</string>
    <string name="quizSelectionText">Choose a quiz from below:</string>
    <string name="quizSubtitleText">Learn about investment and earn rewards towards trading</string>
    <string name="tradeQuizButton">Trade Quiz</string>
    <string name="predictButton">Predict Your Net Worth</string>
    <string name="facebookSettingsLabel">Link With Facebook</string>
    
    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx JOHN ADAMSY WORK xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
    
    <!-- common strings -->
    <string name="default_content_description">Content Descrption</string>
    
    <!-- trading account profile -->
    <string name="label_profile_name">Segun Johnnson</string>
    <string name="label_profile_account_type">Trading Account</string>
    <string name="label_profile_account_location">Lagos, Nigeria</string>
    <string name="label_account_balance">Account Balance</string>
    <string name="account_balance_value">N100,000</string>
    <string name="label_account_state">Gains/Losses</string>
    <string name="account_state_value">+25,000</string>
    <string name="label_account_ranking">Ranking</string>
    <string name="account_ranking_value">1000</string>
    
    <!-- news -->
    <string name="hint_search">Search&#8230;</string>
    <string name="news_item_title">NASDAQ</string>
    <string name="label_news_item_category">Category</string>
    <string name="label_details_news_title">Blog Post Title</string>
    <string name="likes_count">23</string>
    <string name="comments_count">4</string>
    <string name="contentPostTime">Yesterday @ 12:14 PM</string>
    <string name="newsPostContent">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="twitterSettingsLabel">Link with Twitter</string>
    <string name="saveSettingsButton">Save Settings</string>
    <string name="other1Settings">Lorem Ipsum Dolor</string>
    <string name="other2OptionText">Sit Amet Metta</string>

</resources>
