<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/screen_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/triviaScreenLogo"
        style="@style/screen_logo"
        android:contentDescription="@string/genericContentDescription"
        android:src="@drawable/screen_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/triviaScreenLogo" >

        <LinearLayout
            android:id="@+id/triviaInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameTitleTextView"
                style="@style/trivia_screen_label.title"
                android:text="@string/nameTitleText" />

            <ImageView
                android:id="@+id/triviaSscreenImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/genericContentDescription"
                android:src="@drawable/trivia_screen_image" />

            <TextView
                android:id="@+id/quizZelectionSubtitle"
                style="@style/trivia_screen_label.subtitle"
                android:text="@string/quizSubtitleText" />

            <TextView
                android:id="@+id/quizSelectionTextView"
                style="@style/trivia_screen_label.title"
                android:text="@string/quizSelectionText" />

            <Button
                android:id="@+id/tradeQuizButton"
                style="@style/trivia_button"
                android:text="@string/tradeQuizButton" />

            <Button
                android:id="@+id/predictButton"
                style="@style/trivia_button"
                android:text="@string/predictButton" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>