<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/screen_root" >

    <ImageView
        android:id="@+id/sign_in_logo"
        style="@style/screen_logo"
        android:contentDescription="@string/genericContentDescription" />

    <LinearLayout
        android:id="@+id/sign_in_container"
        style="@style/screen_input_container"
        android:layout_below="@+id/sign_in_logo" >

        <EditText
            android:id="@+id/emailEditText"
            style="@style/edit_text"
            android:hint="@string/emailInputHint"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/edit_text"
            android:hint="@string/passwordInputHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInButton"
            style="@style/signup_button"
            android:text="@string/sign_in_button" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/socialButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@style/social_network_button.facebook" >

        <Button
            android:id="@+id/twitterButton"
            style="@style/social_network_button.twitter"
            android:text="@string/twitterButton" />
        <RelativeLayout
            android:id="@+id/socialButtonContainerSeparator"
            android:layout_margin="@dimen/dimen_tiny1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/facebookButton"
            style="@style/social_network_button.facebook"
            android:text="@string/facebookButton" />
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/genericContentDescription"
            android:layout_centerInParent="true"
            android:src="@drawable/sign_in_screen_social_network_icon"/>
    </RelativeLayout>

</RelativeLayout>