<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff" >
   
    <!-- background top -->
		<FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_nse" >
       
         <!-- Invest now logo -->
        <ImageView
        android:id="@+id/ubacapital_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_investnow" 
        android:contentDescription="@string/default_content_description"
        />

        <!-- trading profile name and location -->
        <RelativeLayout
            android:id="@+id/profile_info_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:padding="5dip" >

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:text="@string/label_profile_name"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/profile_account_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/profile_name"
                android:layout_below="@+id/profile_name"
                android:text="@string/label_profile_account_type"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/profile_account_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/profile_account_type"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/icon_map_marker"
                android:text="@string/label_profile_account_location"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/icon_map_marker"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_alignTop="@+id/profile_account_type"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/profile_account_type"
                android:background="@android:color/transparent"
                android:contentDescription="@string/default_content_description"
                android:src="@drawable/ic_marker" />
        </RelativeLayout>
        
        </FrameLayout>
        
		<!-- trading account stats -->
		<LinearLayout
        android:id="@+id/layout_account_breakdown"
        style="@style/layoutStyle"
        android:layout_below="@+id/content_frame"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutAccountBalance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_account_balance"
                style="@style/AccountProfileText"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:text="@string/label_account_balance" />

            <TextView
                android:id="@+id/label_account_balance_value"
                style="@style/AccountProfileText"
                android:layout_gravity="bottom"
                android:layout_marginTop="2dip"
                android:gravity="center_horizontal"
                android:text="@string/account_balance_value" />
        </LinearLayout>
        
         <View
            android:id="@+id/separator_one"
            style="@style/layoutSeparator" />
        
        <LinearLayout
            android:id="@+id/linearLayoutAccountState"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.245"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_account_state"
                style="@style/AccountProfileText"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:text="@string/label_account_state" />

          <TextView
                android:id="@+id/label_account_state_value"
                style="@style/AccountProfileText"
                android:textColor="#01ff00"
                android:layout_gravity="bottom"
                android:layout_marginTop="2dip"
                android:gravity="center_horizontal"
                android:text="@string/account_state_value" />
        </LinearLayout>
        
        <View
            android:id="@+id/separator_two"
            style="@style/layoutSeparator" />
        
         <LinearLayout
            android:id="@+id/linearLayoutAccountRanking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.245"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_account_ranking"
                style="@style/AccountProfileText"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:text="@string/label_account_ranking" />

          <TextView
                android:id="@+id/label_account_ranking_value"
                style="@style/AccountProfileText"
                android:layout_gravity="bottom"
                android:layout_marginTop="2dip"
                android:gravity="center_horizontal"
                android:text="@string/account_ranking_value" />
        </LinearLayout>

        
    </LinearLayout>
        
		
        
       
</RelativeLayout>
